--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/bodoni-moda": "^5.0.16",
     "@fontsource-variable/eb-garamond": "^5.0.20",
     "astro": "^4.14.5",
     "lucide-react": "^0.435.0",
